kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: exchange
  labels:
    name: exchange
    app: exchange-platform
